[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "neptune-sdk"
dynamic = ["version"]
description = "Python SDK for Neptune BitTorrent client JSON-RPC API"
requires-python = "==3.14.6"
license = "GPL-3.0-only"
dependencies = [
  "httpx==0.28.1",
  "pydantic==2.13.4",
]

[dependency-groups]
dev = [
  "pytest==9.1.1",
  "respx==0.23.1",
  "ruff==0.15.20",
  "ty==0.0.55",
]

[tool.pdm.version]
source = "scm"
tag_regex = "^sdk/python/v(.+)$"
version_format = "_version_helper:format_version"

[tool.pdm.build]
package-dir = "src"

[tool.pytest.ini_options]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
